[package]
name = "local-dream"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] } # Removed "blocking"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
regex = "1.10"