[package]
name = "local-dream"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
image = { version = "0.24", features = ["png", "jpeg"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
